--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -6,10 +6,9 @@
 # Appearance
 
 appearance:
-  theme_day: minimal
-  theme_night: minimal
-  font: minimal
-  font_size: L
+  theme_night: my_theme
+  font: custom_font
+  font_size: M
 
 # SEO
 
@@ -18,8 +17,8 @@ marketing:
     site_type: Person
     local_business_type: ''
     org_name: ''
-    description: 'A highly-customizable Hugo academic resume theme powered by Hugo Blox Builder.'
-    twitter: 'GetResearchDev'
+    description: 'Jialing Wu, Engineering Education Research.'
+    twitter: ''
   analytics:
     google_analytics: ''
     baidu_tongji: ''
@@ -45,7 +44,7 @@ header:
 
 footer:
   copyright:
-    notice: '© {year} Me. This work is licensed under {license}'
+    notice: '© {year} Jialing Wu. This work is licensed under {license}'
     license:
       enable: true
       allow_derivatives: false
@@ -56,7 +55,7 @@ footer:
 
 locale:
   date_format: 'Jan 2, 2006'
-  time_format: '3:04 PM'
+  time_format: '15:04 PM'
   address_format: en-us
 
 # Site features
@@ -70,12 +69,12 @@ features:
   privacy_pack:
     enable: false
   repository:
-    url: 'https://github.com/<username>/<repository>'
+    url: 'https://github.com/jialing-wu/jialing-wu.github.io/'
     content_dir: content
     branch: main
   avatar:
     gravatar: false
-    shape: circle
+    shape: square
   comment:
     provider: ''
     disqus:
