--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -22,6 +22,9 @@ main:
   - name: Short CV
     url: '#shortcv'
     weight: 60
+  - name: Resume
+    url:  uploads/resume.pdf
+    weight: 80 
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/uploads/resume.pdf` and uncomment the lines below.
