--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -24,10 +24,10 @@ main:
     weight: 30
   - name: Resume
     url:  uploads/resume.pdf
-    weight: 60 
+    weight: 40 
   - name: Notebook
-    url: ‘https://jlwexperienceshare.netlify.app’
-    weight: 80 
+    url: 
+    weight: 50 
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/uploads/resume.pdf` and uncomment the lines below.
