--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -7,9 +7,7 @@ main:
   - name: Home
     url: '#about'
     weight: 10
- # - name: Posts
-  #  url: '#posts'
-  #  weight: 20
+
  # - name: Projects
   #  url: '#projects'
   #  weight: 30
@@ -25,7 +23,9 @@ main:
   - name: Resume
     url:  uploads/resume.pdf
     weight: 40 
-
+  - name: Posts
+    url: '#posts'
+    weight: 60
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/uploads/resume.pdf` and uncomment the lines below.
 #  - name: CV
