--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -20,10 +20,10 @@ main:
     url: '#shortcv'
     weight: 30
   - name: Resume
-    url:  uploads/resume.pdf
+    url: uploads/resume.pdf
     weight: 40 
   - name: Notebook
-    url:  
+    url: ddeenotebook.netlify.app
     weight: 60 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/uploads/resume.pdf` and uncomment the lines below.
