--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -23,7 +23,7 @@ main:
     url: uploads/resume.pdf
     weight: 40 
   - name: Notebook
-    url: ddeenotebook.netlify.app
+    url: https://ddeenotebook.netlify.app/
     weight: 60 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/uploads/resume.pdf` and uncomment the lines below.
